# template-architecture

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  setup.cfg
src/: Dockerfile  main.py  service.py
src/api/: __init__.py  errors.py  routes.py
src/core/: __init__.py  config.py  logger.py
src/db/: __init__.py  db_factory.py  test_db_repository.py
src/models/: __init__.py  general.py
