[tool.poetry]
name = "template-architecture"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.1.0"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic-settings = "^2.7.1"
orjson = "^3.10.15"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
